@@ -15,6 +15,12 @@ my $build = Test::Run::Builder->new(
     {
         'Module::Build' => 0.36,
     },
+    build_requires =>
+    {
+        'Test::More' => 0,
+        'strict' => 0,
+        'warnings' => 0,
+    },
     meta_merge =>
     {
         resources =>
