@@ -1,3 +1,6 @@
+    - Convert the t/*.t files to use $^X, -Mblib, Test::More::is() and
+    "use warnings;" instead of "-w".
+
 0.1.6    Sun Oct  8 19:44:25 IST 2006
     - converted the build system to Build.PL with a traditional Makefile.PL.
     - added a BSD license meta-data.
